2001-12-03  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS

2001-11-25  Kevn Vandersloot <kfv101@psu.edu>

	* configure.in: fix the check for gtk. That should
	be gtk+-2.0 not gtk-2.0

	* src/Makefile.am: remove LIBGTOP_LIBS and LIBGTOP_CFLAGS

2001-11-25  Kevn Vandersloot <kfv101@psu.edu>

	* configure.in: check for libgtop-2.0.pc. This makes procman
	fully GNOME 2.0 dependant :) You have to get libgtop from a
	as yet unknown branch. DO NOT get it from HEAD! I will make
	a libgtop branch soon and it will be stable ported to 
	GNOME 2.0

2001-11-26  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Add check for (upcoming) gtk 1.3.11. It won't
	  even compile with gtk 1.3.10.

2001-11-23  Kevin Vandersloot <kfv101@psu.edu>

        * configure.in, Makefile.am: no longer need the intl/
        and macros/ directory. Update for GNOME 2.0. Side effect
        is that the libgtop macro is not picked up. For now 
        you can copy the libgtop macro from /usr/share/macros/gnome-macros
        to the gnome2-macros directory

Sat Nov 24 15:00:31 2001  Kristian Rietveld  <kristian@planet.nl>

	* src/callbacks.c (compare_disks): free old_name before we
	return

Fri Nov 23 14:44:26 2001  Owen Taylor  <otaylor@redhat.com>

	* src/interface.c src/memmaps.c src/proctable.c: Adapt
	to GtkTreeView changes.

	* src/proctable.c: Pack icon cell renderer in the same column 
	as the name.

2001-11-14  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: remove libwnck for now

2001-10-27  Yuriy Syrota  <rasta@renome.rovno.ua>

	* configure.in: Added "uk" to ALL_LINGUAS.

2001-10-22  Abel Cheung  <maddog@linux.org.hk

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2001-10-01  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: check for gconf-2 

2001-09-30  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl.

2001-09-29  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: update for GNOME 2.0. No longer require