@@ -11,12 +11,7 @@ configure
 intl
 stamp-h
 stamp-h.in
-xml-i18n-update.in
-xml-i18n-merge.in
-xml-i18n-extract.in
-xml-i18n-update
-xml-i18n-merge
-xml-i18n-extract
+intltool-*
 procman.desktop
 *.swp
 build
