@@ -4,7 +4,7 @@ AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(procman, 1.1.1)
 AM_CONFIG_HEADER(config.h)
 
-AM_PROG_XML_I18N_TOOLS
+AC_PROG_INTLTOOL
 
 AC_ISC_POSIX
 AC_PROG_CC
@@ -28,6 +28,9 @@ AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps")
 dnl Add the languages which your application supports here.
 ALL_LINGUAS="da ru de es gl it no pl sv tr uk zh_TW"
 
+GETTEXT_PACKAGE=procman
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
 AM_GLIB_GNU_GETTEXT
 
 dnl Set PACKAGE_LOCALE_DIR in config.h.
